# livelybot_robot

./: .gitignore  README.md  readme.md  test_feedback.sh  test_motor_feedback.sh  test_reconfigure.sh  test_reset_zero.sh  test_timeout.sh
.catkin_tools/profiles/default/: devel_collisions.txt
doc/: robot_code.txt  yaml配置文件说明.md  机器人launch文件说明.md
src/livelybot_bringup/launch/: test_feedback.launch  test_motor_feedback.launch  test_motor_run.launch  test_reconfigure.launch  test_reset_zero.launch  test_timeout.launch
src/livelybot_description/launch/: livelybot_description.launch
src/livelybot_description/robot_param/: 10dof_STM32H730_model_test_Orin_params.yaml  12dof_STM32H730_model_test_Orin_params.yaml  1dof_STM32H730_model_test_Orin_params.yaml  20dof_STM32H730_model_test_Orin_params.yaml  23dof_STM32H730_model_test_Orin_params.yaml  2dof_STM32H730_model_test_Orin_params.yaml  6dof_STM32H730_model_test_Orin_params.yaml  7dof_STM32H730_model_test_Orin_params.yaml  80dof_STM32H730_model_test_Orin_params.yaml
src/livelybot_oled/: CMakeLists.txt  package.xml
src/livelybot_oled/include/: ip_addr.hpp  sensor_actuator_status.hpp
src/livelybot_oled/launch/: oled_run.launch
src/livelybot_oled/src/: ip_addr.cpp  ip_addr.hpp  oled_hardware_test.cpp  oled_interface.cpp  oled_run.cpp  sensor_actuator_status.cpp  sensor_actuator_status.hpp
src/livelybot_power/: CMakeLists.txt  package.xml
src/livelybot_power/src/: livelybot_can_driver.hpp  livelybot_power.cpp  power.cpp  power_class.cpp
src/livelybot_serial/: CMakeLists.txt
src/livelybot_serial/include/: lively_serial.h  motor_struct.h  robot_node.h  serial_struct.h
src/livelybot_serial/include/hardware/: canboard.h  canport.h  motor.h  robot.h
src/livelybot_serial/src/: ik_run.cpp  lively_serial.cc  serial_t.cpp
src/livelybot_serial/src/hardware/: canboard.cc  canport.cc  motor.cc  robot.cc
src/livelybot_serial/test/: oled_motor_create.cpp  test_feedback.cpp  test_ik_run.cpp  test_jump.cpp  test_motor.cpp  test_motor_feedback.cpp  test_motor_run.cpp  test_reconfigure.cpp  test_reset_zero.cpp  test_timeout.cpp
